# entropy-gapfilling

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATASET.md  LICENSE  Makefile  PLAN.md  README.md  issues.md  main.py  pdi.md  pyproject.toml  slurm_pdi-hello-cuda.md
.agent/skills/: pandas-performance
.agents/skills/matplotlib/: SKILL.md
.agents/skills/numpy/: SKILL.md
.agents/skills/opencv/: SKILL.md
.agents/skills/pandas-performance/: SKILL.md
.agents/skills/pytorch/: SKILL.md
.agents/skills/scikit-image/: SKILL.md
.agents/skills/scipy/: SKILL.md
.agents/skills/seaborn/: SKILL.md
.agents/skills/statsmodels/: SKILL.md
.claude/: settings.json
.claude/docs/: code-quality.md  planning-workflow.md
.claude/hooks/: enforce-no-jupyter.sh  enforce-uv.sh
.claude/skills/python-patterns/: SKILL.md
.github/instructions/: copilot.instructions.md
config/: paper_results.yaml  quick_validation.yaml
dl_models/: __init__.py  ae_history.json  evaluate.py  gan_history.json  plot_training.py  vae_history.json
dl_models/ae/: __init__.py  model.py  train.py
dl_models/gan/: __init__.py  model.py  train.py
dl_models/shared/: __init__.py  base.py  dataset.py  metrics.py  trainer.py  visualization.py
dl_models/transformer/: __init__.py  model.py  train.py
dl_models/unet/: __init__.py  model.py  train.py
dl_models/unet_jax/: __init__.py  model.py  train.py
dl_models/vae/: __init__.py  model.py  train.py
dl_models/vit/: __init__.py  model.py  train.py
docs/: aas_macros.sty  acronyms.tex  apalike-sol.bst  main.tex  sbc2019.cls  tuacademicons.fd
docs/tables/: dataset-stats.tex  dl-architectures.tex  dl-results.tex  methods.tex  morans.tex  psnr-entropy-tercile.tex  psnr-method-noise.tex  psnr-satellite.tex  robust-regression.tex  spearman-heatmap.tex  table3_entropy_31.tex  table3_entropy_7.tex  table5_kruskal.tex  table6_regression_rmse.tex  table6_regression_ssim.tex
graphs-examples/: boxplot.py  matrix.py  scatter.py  style.mplstyle
images/: style.mplstyle
results/quick_validation/tables/: methods.tex  psnr-entropy-tercile.tex  psnr-method-noise.tex  psnr-satellite.tex  spearman-heatmap.tex
scripts/: aggregate_results.py  check_experiment_deps.sh  clear_experiments.sh  generate_figures.py  generate_tables.py  grid_search_classical.py  grid_search_dl.py  pack_paper_assets.sh  package_dataset.sh  precompute_entropy.py  preprocess_dataset.py  run_experiment.py  run_experiment.sh
scripts/slurm/: experiment_classical.sbatch  experiment_classical_quick.sbatch  hello_cuda.sbatch  preprocess.sbatch  setup_env.sh  submit_all.sh  train_ae.sbatch  train_all.sbatch  train_dl_quick.sbatch  train_gan.sbatch  train_model.py  train_unet.sbatch  train_vae.sbatch  train_vit.sbatch
src/dl-models/: __init__.py  evaluate.py  plot_training.py
src/dl-models/ae/: __init__.py  config.yaml  model.py  train.py
src/dl-models/gan/: __init__.py  config.yaml  model.py  train.py
src/dl-models/shared/: __init__.py  base.py  dataset.py  utils.py
src/dl-models/transformer/: __init__.py  config.yaml  model.py  train.py
src/dl-models/vae/: __init__.py  config.yaml  model.py  train.py
src/pdi_pipeline/: __init__.py  aggregation.py  config.py  dataset.py  entropy.py  entropy_buckets.py  exceptions.py  experiment_artifacts.py  logging_utils.py  metrics.py  preprocessing.py  statistics.py  visualization.py
src/pdi_pipeline/methods/: __init__.py  _griddata.py  _scattered_data.py  (+15 more)
tests/: conftest.py
tests/integration/: test_bicubic.py  test_bilinear.py  test_compressive.py  test_dineof.py  test_idw.py  test_kriging.py  test_lanczos.py  test_multi_temporal.py  test_nearest.py  test_patch_based.py  test_rbf.py  test_runner.py  test_spline.py  test_transforms.py
tests/unit/: test_aggregation.py  test_base.py  test_config.py  test_dataset.py  test_dl_models.py  test_entropy.py  test_exceptions.py  test_metrics.py  test_registry.py  test_scattered_data.py  test_statistics.py  test_statistics_regression.py  test_training_history.py  test_visualization.py
