[project]
name = "pdi-entropy-gapfilling"
version = "1.0.0"
description = "Entropy-guided gap-filling methods for satellite imagery: A comparative study of spatial interpolation techniques."
authors = [{ name = "Emanuel Avila", email = "meiazero@tuta.io" }]
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "satellite-imagery",
    "gap-filling",
    "image-reconstruction",
    "entropy",
    "remote-sensing",
    "spatial-interpolation",
    "geospatial",
    "reproducibility",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
     "cvxpy>=1.7.5",
     "esda>=2.5.1",
     "libpysal>=4.8.1",
     "matplotlib>=3.9.4",
     "numpy>=2.0.2",
     "opencv-python>=4.11.0.86",
     "pandas>=2.3.3",
     "pyarrow>=21.0.0",
     "pykrige>=1.7.3",
     "pywavelets>=1.6.0",
     "pyyaml>=6.0.3",
     "rasterio>=1.4.3",
     "scikit-image>=0.24.0",
     "scikit-learn>=1.6.1",
     "scipy>=1.13.1",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
     "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/meiazero/pdi-entropy-gapfilling"
Repository = "https://github.com/meiazero/pdi-entropy-gapfilling"
Documentation = "https://github.com/meiazero/pdi-entropy-gapfilling#readme"

[project.scripts]
pdi-preprocess = "scripts.preprocess_dataset:main"
pdi-experiment = "scripts.run_experiment:main"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pandas-stubs>=2.2.2.240807",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "scipy-stubs==1.17.0.2",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdi_pipeline"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
exclude = ["outputs/", ".venv/"]
strict = true
show_error_codes = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py312"
line-length = 80
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

# TODO: reduce this ignore list gradually
ignore = [
    "PGH003",
    "TRY003",
    "B905", # `zip()` without an explicit `strict=` parameter
    "C901", # complexity
    "C408",
    "E741",
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/dl-models/**/train.py" = ["E402"]
"src/dl-models/evaluate.py" = ["E402"]
"src/dl-models/plot_training.py" = ["E402"]
"src/dl-models/shared/utils.py" = ["E402"]
"tests/unit/test_dl_models.py" = ["S101", "E402"]
"tests/unit/test_training_history.py" = ["S101", "E402"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.deptry]
ignore = ["DEP001", "DEP002"]
known_first_party = ["src"]
